tests/matrices/invalid/invalid_truncated_line_1.mtx
%%MatrixMarket matrix coordinate real general
7 7 12
2 1 1
4 1 1
5 2